
  * recentchanges: Fix redirects to non-page files. 
  * aggregate: Avoid uninitialized value warnings for pages with no recorded
    ctime.
  * attachment: Add admin() pagespec to test if the uploading user is a wiki
    admin.
  * git: Fix handling of utf-8 filenames in recentchanges.
  * tag: Make edit link for new tags ensure that the tags are created
    inside tagbase, when it's set.

 -- Joey Hess <joeyh@debian.org>  Thu, 25 Sep 2008 13:45:55 -0400

ikiwiki (2.65) unstable; urgency=low

  * aggregate: Expire excess or old items on the same pass that adds them,
    not only on subsequent passes.
  * editdiff: Broken since 2.62 due to wrong syntax, now fixed.
  * aggregate: Support atom feeds with only a summary element, and no content
    elements.
  * progress: Display an error if the progress cannot be parsed, and allow
    the percent parameter to only optionally end with "%".
  * Fix reversion in use of ikiwiki -verbose -setup with a setup file that
    enables syslog. Setup output is once again output to stdout in this
    case.
  * edittemplate: Default new page file type to the same type as the template.
    (willu)
  * edittemplate: Add "silent" parameter. (Willu)
  * edittemplate: Link to template, to allow creating it. (Willu)
  * editpage: Add a missing check that the page name contains only legal
    characters, in addition to the existing check for pruned filenames.
  * Print a debug message if a page has multiple source files.
  * Add keepextension parameter to htmlize hook. (Willu)
  * rename, remove: Don't rely on a form parameter to tell whether the page
    should be treated as an attachment.
  * rename: Add support for moving SubPages of a page when renaming it.
    (Sponsored by The TOVA Company.)
  * rename: Hide type field from rename form when renaming attachments.

 -- Joey Hess <joeyh@debian.org>  Wed, 24 Sep 2008 17:55:14 -0400

ikiwiki (2.64) unstable; urgency=low
